Add doc-values aggregators for the collect set aggregation.
It improves the performance of the global standard deviation aggregations.
See https://github.com/crate/crate/pull/10048 for more information.